...
        <item>Avia</item>
        <item>Carrefour</item>
        <item>Cepsa</item>
        <item>Easygas</item>
        <item>Galp</item>
        <item>Petroprix</item>
        <item>Repsol</item>
        <item>Shell</item>
    </string-array>
    <string-array name="municipiosArray">
        <item>Mostrar todos</item>
        <item>Alfoz de Lloredo</item>
        <item>Ampuero</item>
...
