<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F2EE">

    <TextView
        android:id="@+id/tvRegistrarRepostaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:text="Registrar repostaje"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLitros"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:text="Litros :"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistrarRepostaje" />

    <TextView
        android:id="@+id/tvPrecioTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:text="Precio total :"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvLitros"
        app:layout_constraintTop_toBottomOf="@+id/tvLitros" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:backgroundTint="#3F50B4"
        android:text="Guardar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPrecioTotal" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:backgroundTint="#3F4FB3"
        android:text="Cancelar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnGuardar"
        app:layout_constraintStart_toStartOf="@+id/btnGuardar"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="420dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:textColor="#FA1111"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCancelar"
        tools:text="Error: Los datos introducidos no son correctos" />

    <EditText
        android:id="@+id/textLitros"
        android:layout_width="152dp"
        android:layout_height="39dp"
        android:layout_marginStart="92dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvLitros"
        app:layout_constraintStart_toEndOf="@+id/tvLitros" />

    <EditText
        android:id="@+id/textPrecioTotal"
        android:layout_width="152dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#121111"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPrecioTotal"
        app:layout_constraintStart_toEndOf="@+id/tvPrecioTotal" />


</androidx.constraintlayout.widget.ConstraintLayout>